--- a/cargo.toml
+++ b/cargo.toml
@@ -8,7 +8,7 @@ resolver = "2"
 
 [profile.release]
 opt-level     = 3
-lto           = true
+lto           = false
 codegen-units = 1
 strip         = true
 
