too many updates to talk about... :)

--- a/cargo.toml
+++ b/cargo.toml
@@ -30,3 +30,4 @@ ureq              = "3"
 rodio             = "0.21.1"
 png               = "0.18.1"
 cpal              = "0.15"
+egui-desktop      = "0.2.2"
