--- a/cargo.toml
+++ b/cargo.toml
@@ -31,3 +31,4 @@ rodio             = { version = "0.21.1", features = ["mp3", "mp4", "flac", "vor
 png               = "0.18.1"
 cpal              = "0.15"
 egui-desktop      = "0.2.2"
+winresource       = "0.1"
